syntax = "proto3";

import "bbuhot/service/error_code.proto";
import "bbuhot/service/user_dto.proto";

option java_package = "com.bbuhot.server.service";
option java_multiple_files = true;

message AuthDto {
  ErrorCode error_code = 1;
  UserDto user = 2;
}
