syntax = "proto3";

import "bbuhot/service/user_dto.proto";

option java_package = "com.bbuhot.server.service";
option java_multiple_files = true;

message AuthRequest {
  int32 uid = 1;
  string auth = 2;
  string saltKey = 3;
}